[project]
name = "Example"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mahir", email = "mahirnav@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    "pytest>=8.0.1",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", 'ISC001', "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"] 

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
